# uttt-mcts

./: Cargo.toml  play.py  pyproject.toml
python/uttt_mcts/: __init__.py
python/uttt_rl/: __init__.py
src/: env.rs  lib.rs  mcts.rs  pmcts.rs
src/game/: bb.rs  game.rs  mod.rs  player.rs  sb.rs  utils.rs
