[package]
name = "uttt-rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "uttt_rl"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.17.1"
pyo3 = { version = "0.18.3", features = ["extension-module"] }
rand = "0.8.5"
